# gs-madrona

./: .gitignore  .gitmodules  README.md  pyproject.toml  renderdocrun.sh
.github/workflows/: clang-tidy.yml  python-format.yml
cmake/: dependencies.cmake
include/madrona/: registry.inl  state.inl
include/madrona/render/: ecs.hpp  render_mgr.hpp
py/: madrona_py_build.py
scripts/: parse_device_tracing.py  parse_host_tracing.py  profile.py
scripts/perf_benchmark/: README.md  batch_benchmark.py  benchmark_madrona.py  benchmark_maniskill.py  benchmark_omni.py  benchmark_pyrender.py  benchmark_report_generator.py  process_xml.py
scripts/perf_benchmark/configs/: benchmark_config_madrona.yml
src/bridge/: CMakeLists.txt  bindings.cpp  mgr.cpp  mgr.hpp  sim.cpp  sim.hpp  types.hpp
src/bridge/examples/: demo.py  simple_demo.py
src/bridge/gs_madrona/: renderer_gs.py
src/bridge/madrona_gs/: demo.py  renderer_gs.py  simple_demo.py
src/common/: cuda_utils.cpp  mesh_bvh_builder.cpp
src/mw/: CMakeLists.txt  cuda_exec.cpp
src/mw/device/: bvh_raycast.cpp  ecs_render_bridge.cpp  state.cpp
src/mw/device/include/madrona/: bvh.hpp  state.hpp  state.inl
src/python/: CMakeLists.txt  jax_register.py
src/render/: api.cpp  asset_processor.cpp  batch_renderer.cpp  batch_renderer.hpp  ecs_system.cpp  render_common.hpp  render_ctx.cpp  render_ctx.hpp  render_mgr.cpp
src/render/core_wip/metal/: batch_renderer.cpp
src/render/shader/: compiler.cpp
src/render/shaders/: batch_draw_depth.hlsl  batch_draw_rgb.hlsl  batch_shadow_draw.hlsl  batch_shadow_gen.hlsl  draw_deferred_rgb.hlsl  shader_common.h  shader_utils.hlsl
src/render/vk/: backend.cpp  memory.cpp  memory.hpp  utils.cpp  utils.hpp
src/viz/: viewer_renderer.cpp
