[project]
name = "gs_madrona"
version = "0.0.1"

[build-system]
requires = ["scikit-build-core>=0.5.0", "nanobind>=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.11"
cmake.args = [
  "-DCMAKE_INSTALL_RPATH_USE_LINK_PATH=ON",
  "-DCMAKE_BUILD_WITH_INSTALL_RPATH=ON",
  "-DCMAKE_INSTALL_RPATH='$ORIGIN'",
]
ninja.make-fallback = true
wheel.py-api = "cp310"
wheel.cmake = true
editable.verbose = true
editable.rebuild = false
build.verbose = true
install.strip = false
search.site-packages = true

[tool.isort]
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ["typing"]
order_by_type = false
group_by_package = true
line_length = 120
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
extend-exclude = '''(
  .ipynb$
)'''
